[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitdork"
version = "1.0.0"
description = "Google, Shodan, and GitHub dork generator for pentesters and bug bounty hunters"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "ExploitCraft", email = "exploitcraft@users.noreply.github.com" }]
keywords = ["security", "dorking", "osint", "recon", "pentest", "bugbounty", "google-dorks", "shodan"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.25",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "respx"]

[project.scripts]
gitdork = "gitdork.cli:main"

[project.urls]
Homepage = "https://github.com/ExploitCraft/gitdork"
Repository = "https://github.com/ExploitCraft/gitdork"
"Bug Tracker" = "https://github.com/ExploitCraft/gitdork/issues"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
